--- a/sidebar.html
+++ b/sidebar.html
@@ -1,5 +1,5 @@
-<div class="sidebar">
-    <h2>🏥 GuidedCare</h2>
+<aside class="sidebar">
+    <h3>🏥 GuidedCare</h3>
 
     <a href="index.html">📊 Dashboard</a>
     <a href="family.html">👨‍👩‍👧 Family</a>
@@ -7,4 +7,4 @@
     <a href="#">💬 Community</a>
     <a href="#">🤖 AI Doctor</a>
     <a href="#" onclick="logout()">🚪 Logout</a>
-</div>
+</aside>
