--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@ fetch('sidebar.html')
 </script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
-<body>
+<body onload="checkAuth();">
 
 <div class="content" style="max-width:400px;margin:auto;margin-top:100px;">
     <div class="card">
