--- a/sidebar.html
+++ b/sidebar.html
@@ -1,32 +1,33 @@
-<!-- <aside class="sidebar">
-    
+<div class="sidebar">
 
-    <a href="index.html">📊 Dashboard</a>
-    <a href="family.html">👨‍👩‍👧 Family</a>
-    <a href="records.html">🩺 Records</a>
-    <a > Community</a>
-    <a href="#"> Talk to Doc/ AI C</a>
-    <a href="#" onclick="logout()">🚪 Logout</a>
-</aside> -->
+    <a href="index.html" class="logo-link">
+        <span class="logo-icon">📊</span>
+        <span class="logo-text">Dashboard</span>
+    </a>
 
+    <a href="family.html" class="logo-link">
+        <span class="logo-icon">👨‍👩‍👧</span>
+        <span class="logo-text">Family</span>
+    </a>
 
-<a href="index.html" class="logo-link">
-    <span class="logo-icon">📊 </span>
-    <span class="logo-text">Dashboard</span>
-</a>
-<a href="family.html" class="logo-link">
-    <span class="logo-icon">👨‍👩‍👧</span>
-    <span class="logo-text">Family</span>
-</a>
-<a href="records.html" class="logo-link">
-    <span class="logo-icon">📁</span>
-    <span class="logo-text">Records</span>
-</a>
-<a href="#" class="logo-link">
-    <span class="logo-icon">💬</span>
-    <span class="logo-text">Community</span>
-</a>
-<a href="#" class="logo-link">
-    <span class="logo-icon">📞</span>
-    <span class="logo-text">Talk to Doc/ AI chat</span>
-</a>
+    <a href="records.html" class="logo-link">
+        <span class="logo-icon">📁</span>
+        <span class="logo-text">Records</span>
+    </a>
+
+    <a href="#" class="logo-link">
+        <span class="logo-icon">💬</span>
+        <span class="logo-text">Community</span>
+    </a>
+
+    <a href="#" class="logo-link">
+        <span class="logo-icon">🤖</span>
+        <span class="logo-text">AI Chat</span>
+    </a>
+
+    <a href="#" class="logo-link">
+        <span class="logo-icon">📞</span>
+        <span class="logo-text">Talk to Doc</span>
+    </a>
+
+</div>
